// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`outputs the expected tree when lastUpdated is now 1`] = `
<span
  className="time-since-last-updated"
>
  Just now.
</span>
`;

exports[`outputs the expected tree when lastUpdated not passed 1`] = `""`;

exports[`outputs the expected tree when the update is not overdue 1`] = `
<span
  className="time-since-last-updated"
>
  1 second ago.
</span>
`;

exports[`outputs the expected tree when the update is overdue 1`] = `
<span
  className="time-since-last-updated overdue"
>
  5 seconds ago.
</span>
`;
